<resources>
    <string name="app_name">妙妙小工具</string>
    <string name="not_comic_yet">书架空空如也</string>
    <string name="empty_state_hint">点击右下角按钮，导入漫画目录或压缩包</string>
    <string name="refresh">刷新</string>
    <string name="file_selector_title">选择目录</string>
    <string name="path_internal_storage">内部存储</string>
    <string name="path_pictures">Pictures</string>
    <string name="path_screenshots">Screenshots</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm_select">选择此目录</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_create">创建</string>
    <string name="btn_go_back">返回上级</string>
    <string name="select_all">全选</string>
    <string name="select_nothing">全不选</string>
    <string name="name_should_not_empty">名称不能为空</string>
    <string name="jump_to_page">跳转到指定页码</string>
    <string name="hint_search">搜索文件夹...</string>
    <string name="hint_folder_name">输入文件夹名称</string>
    <string name="dialog_new_folder_title">新建文件夹</string>
    <string name="selected_count">已选择: 0 项</string>
    <string name="empty_folder">该文件夹为空</string>
    <string name="no_search_results">没有找到匹配的文件或文件夹</string>
    <string name="cd_back_button">返回</string>
    <string name="cd_home_button">主页</string>
    <string name="cd_more_options">更多选项</string>
    <string name="cd_create_folder">新建文件夹</string>
    <string name="cd_sort">排序</string>
    <string name="cd_view_mode">视图模式</string>
    <string name="cd_search">搜索</string>
    <string name="cd_select_indicator">选择指示器</string>
    <string name="type_folder">文件夹</string>
    <string name="type_image">图片</string>
    <string name="type_document">文档</string>
    <string name="items_count">%d 个项目</string>
    <string name="time_just_now">刚刚创建</string>
    <string name="time_today">今天</string>
    <string name="time_yesterday">昨天</string>
    <string name="my_library">我的漫画库</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="search_hint">搜索本地漫画...</string>
    <string name="search_hint_text">搜索栏已展开，再次点击图标可收起</string>
    <string name="notification_text">本地漫画已同步 - 共有12本漫画</string>
    <string name="category_all">全部</string>
    <string name="category_completed">已完结</string>
    <string name="category_ongoing">连载中</string>
    <string name="category_chinese">国漫</string>
    <string name="category_japanese">日漫</string>
    <string name="category_korean">韩漫</string>
    <string name="category_unread">未读</string>
    <string name="category_favorites">收藏</string>
    <string name="empty_title">没有找到漫画</string>
    <string name="empty_message">尝试调整搜索条件或导入新漫画</string>
    <string name="comic_cover">漫画封面</string>
    <string name="sample_title">斗蛐蛐</string>
    <string name="sample_chapter">第328话 新的征程</string>
    <string name="nav_home">首页</string>
    <string name="nav_library">书架</string>
    <string name="nav_discover">发现</string>
    <string name="nav_profile">我的</string>
    <string name="sort_by_name">按名称排序</string>
    <string name="sort_by_last_read_time">按上次阅读时间排序</string>
    <string name="into_select_mode">编辑</string>
    <string name="change_sort">改变\n排列</string>
    <string name="exit">退出</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_wheel">今晚吃什么？</string>
    <string name="hint_wheel">点击开始旋转</string>
    <string name="hint_spinning">正在旋转…</string>
    <string name="btn_start">开始旋转</string>
    <string name="btn_edit">编辑选项</string>
    <string name="hint_tips">💡 小提示：点击选项可暂时禁用\n点击结果可重置转盘</string>
    <string name="dialog_title">编辑选项</string>
    <string name="hint_add_option">输入新的选项名称</string>
    <string name="hint_add_option_wheel">输入新的转盘名称</string>
    <string name="btn_add">添加</string>
    <string name="btn_delete">删除</string>
    <string name="btn_save">保存</string>
    <string name="wheel_title">我的转盘</string>
    <string name="wheel_template">转盘模板</string>
    <string name="message_empty_options">请先添加选项！</string>
    <string name="message_empty_input">请输入选项名称！</string>
    <string name="message_option_exists">该选项已存在！</string>
    <string name="message_delete_confirm">确定要删除"%s"吗？</string>
    <string name="message_result">选择了：%s</string>
    <string name="message_option_add">已添加"%s"</string>
    <string name="title_activity_new_main">NewMainActivity</string>
    <string name="delete_notification">至少保留 "%s" 个嘛</string>
    <string name="generate_random_number">生成随机数</string>
    <string name="setting">设置</string>
    <string name="message_option_count">"%s" 个选项</string>
    <string name="edit">编辑</string>
    <string name="edit_name">编辑名字</string>
    <string name="delete">删除</string>
    <string name="colors">颜色</string>
    <string name="edit_color">修改颜色</string>
    <string name="notification_all_selected">已经全部都选中了</string>
    <string name="click_to_reset">点击我重置</string>
    <string name="cpv_default_title">选择一个颜色</string>
    <string name="cpv_presets">预设</string>
    <string name="cpv_custom">自定义</string>
    <string name="cpv_select">选择</string>
    <string name="cpv_transparency">透明度</string>
    <string name="allow_duplicates">允许重复</string>
    <string name="add_new_option">添加新选项</string>
    <string name="quantity">数量</string>
    <string name="scope">范围</string>
    <string name="clear">清除全部</string>
    <string name="start_spinning">开始旋转</string>
    <string name="add">添加</string>
    <string name="hide_weight">隐藏权重</string>
    <string name="use_weight">使用权重</string>
    <string name="enter_the_option">请输入选项\n每行一个</string>
    <string name="add_batch_option">批量添加选项</string>
    <string name="edit_wheel">编辑转盘</string>
    <string name="create_wheel">新建转盘</string>
    <string name="create_template">新建模板</string>
    <string name="edit_template">编辑模板</string>
    <string name="category_hint">输入分类名称</string>
    <string name="select_wheel">选择转盘</string>
    <string name="my_wheel">我的转盘</string>
    <string name="wheel">转盘</string>
    <string name="random_number">随机数</string>
    <string name="flip_coin">抛硬币</string>
    <string name="lottery">随机抽签点名系统</string>
    <string name="select_template">选择模板</string>
    <string name="create_from_template">从模板创建</string>
    <string name="create_from_default">从默认模板创建</string>
    <string name="create_from_blank">从空白模板创建</string>
    <string name="create_blank_wheel">新建空白转盘</string>
    <string name="city_chongqing">重庆市</string>
    <string name="city_beijing">北京市</string>
    <string name="city_shanghai">上海市</string>
    <string name="city_guangzhou">广州市</string>
    <string name="city_shenzhen">深圳市</string>
    <string name="city_hangzhou">杭州市</string>
    <string name="city_chengdu">成都市</string>
    <string name="city_xian">西安市</string>
    <string name="city_nanjing">南京市</string>
    <string name="city_suzhou">苏州市</string>
    <string name="city_xiamen">厦门市</string>
    <string name="city_qingdao">青岛市</string>
    <string name="city_sanya">三亚市</string>
    <string name="city_lijiang">丽江市</string>
    <string name="city_guilin">桂林市</string>
    <string name="city_zhangjiajie">张家界市</string>
    <string name="city_lhasa">拉萨市</string>
    <string name="hot">热门</string>
    <string name="blank">空白</string>
    <string name="hot_cities">热门城市</string>
    <string name="self_care_ways">爱自己的方式</string>
    <string name="today_food">今天吃什么</string>
    <string name="food">美食</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
    <string name="regional_cuisine">各地美食</string>
    <string name="cantonese_cuisine">广东菜</string>
    <string name="beijing_cuisine">北京菜</string>
    <string name="shanghai_cuisine">上海菜</string>
    <string name="hangzhou_cuisine">杭州菜</string>
    <string name="china_version">国内版</string>
    <string name="asia_version">亚洲版</string>
    <string name="global_version">全球版</string>
    <string name="love_title">恋爱</string>
    <string name="date_ideas">约会做什么</string>
    <string name="gift_for_girlfriend">送女朋友什么礼物？</string>
    <string name="gift_for_boyfriend">送男朋友什么礼物？</string>
    <string name="travel_title">旅游</string>
    <string name="holiday_destinations">放假去哪玩</string>
    <string name="game">游戏</string>
    <string name="truth_or_dare">真心话或大冒险</string>
    <string name="truth">真心话</string>
    <string name="dare">大冒险</string>
    <string name="sports_title">运动</string>
    <string name="workout_today">今天做什么运动</string>
    <string name="fitness_equipment">健身器材</string>
    <string name="adjust_weights">修改权重</string>
    <string name="adjust_time">修改时间</string>
    <string name="confirm_deletion">确认删除</string>
    <string name="default_list">默认列表</string>
    <string name="load_error">加载失败</string>
    <string name="food_hotpot_chain">海底捞</string>
    <string name="food_hotpot">火锅</string>
    <string name="food_bbq">烧烤</string>
    <string name="food_pizza">披萨</string>
    <string name="food_hamburger">汉堡</string>
    <string name="food_sushi">寿司</string>
    <string name="food_spicy_pot">麻辣烫</string>
    <string name="food_sichuan_cuisine">川菜</string>
    <string name="food_cantonese_cuisine">粤菜</string>
    <string name="food_korean_food">韩餐</string>
    <string name="self_love_meditation">冥想与正念</string>
    <string name="self_love_exercise">定期锻炼</string>
    <string name="self_love_reading">阅读喜欢的书籍</string>
    <string name="self_love_diary">写日记记录心情</string>
    <string name="self_love_boundaries">设定个人界限</string>
    <string name="self_love_healthy_food">享受健康的美食</string>
    <string name="self_love_hobby">培养新的兴趣爱好</string>
    <string name="self_love_friends">与支持你的朋友交流</string>
    <string name="self_love_reflection">定期自我反思</string>
    <string name="self_love_break">给自己放个假</string>
    <string name="self_love_learn">学习新技能</string>
    <string name="self_love_sleep">保持充足的睡眠</string>
    <string name="self_love_volunteer">做志愿者帮助他人</string>
    <string name="self_love_nature">欣赏大自然</string>
    <string name="self_love_gratitude">练习感恩</string>
    <string name="self_love_acceptance">接受自己的不完美</string>
    <string name="self_love_gift">给自己买一份小礼物</string>
    <string name="self_love_breathing">进行深呼吸练习</string>
    <string name="self_love_positive">保持积极的心态</string>
    <string name="self_love_health_check">定期体检关注健康</string>
    <string name="food_soy_milk_youtiao">豆浆油条</string>
    <string name="food_egg_sandwich">煎蛋三明治</string>
    <string name="food_oatmeal_milk">牛奶燕麦</string>
    <string name="food_pidan_porridge">皮蛋瘦肉粥</string>
    <string name="food_green_vegetable_porridge">青菜瘦肉粥</string>
    <string name="food_sweet_potato_porridge">地瓜粥</string>
    <string name="food_oatmeal_milk_porridge">燕麦牛奶粥</string>
    <string name="food_mung_bean_porridge">绿豆粥</string>
    <string name="food_corn_pumpkin_porridge">玉米南瓜粥</string>
    <string name="food_red_bean_porridge">红豆粥</string>
    <string name="food_fuding_pork_slice">福鼎肉片</string>
    <string name="food_eight_treasure_porridge">八宝粥</string>
    <string name="food_laba_porridge">腊八粥</string>
    <string name="food_rice_ball">饭团</string>
    <string name="food_rice_tomato_egg">米饭+西红柿炒蛋</string>
    <string name="food_beef_noodles">牛肉面</string>
    <string name="food_covered_rice">盖浇饭</string>
    <string name="food_sandwich_salad">三明治+沙拉</string>
    <string name="food_braised_pork_with_vegetables">红烧肉+青菜</string>
    <string name="food_steamed_fish_with_rice">清蒸鱼+米饭</string>
    <string name="food_dumplings">饺子</string>
    <string name="food_beef_steak_with_vegetables">煎牛排+蔬菜</string>
    <string name="food_shrimp_dumpling">虾饺</string>
    <string name="food_dry_shumai">干蒸烧卖</string>
    <string name="food_char_siu_bun">叉烧包</string>
    <string name="food_egg_tart">蛋挞</string>
    <string name="food_chicken_feet">凤爪</string>
    <string name="food_pork_ribs">排骨</string>
    <string name="food_glutinous_rice_chicken">糯米鸡</string>
    <string name="food_rice_noodle_roll">肠粉</string>
    <string name="food_bean_curd_roll">腐皮卷</string>
</resources>