<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round_top"
    android:maxHeight="500dp"
    android:minHeight="300dp"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- 标题 -->
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/apple_cyan"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/btn_save"
            android:textColor="@color/apple_cyan"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:padding="10dp"
                android:text="@string/scope"
                android:textColor="#333"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_popup_text"
                android:digits="0123456789"
                android:gravity="end"
                android:inputType="number"
                android:padding="10dp"
                android:text="1"
                android:textColor="#333"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:gravity="end"
                android:padding="10dp"
                android:text="~"
                android:textColor="#333"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_popup_text"
                android:gravity="end"
                android:inputType="number"
                android:padding="10dp"
                android:text="100"
                android:textColor="#333"
                android:textSize="18sp" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fff"
                android:padding="10dp"
                android:text="@string/quantity"
                android:textColor="#333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_popup_text"
                android:gravity="end"
                android:padding="10dp"
                android:text="1"
                android:textColor="#333"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:gravity="end"
                android:padding="10dp"
                android:text="~"
                android:textColor="#333"
                android:textSize="18sp"
                android:visibility="invisible" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_popup_text"
                android:gravity="end"
                android:inputType="number"
                android:padding="10dp"
                android:text="100"
                android:textColor="#333"
                android:textSize="18sp" />


        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/bg_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#fff"
                android:padding="10dp"
                android:text="@string/allow_duplicates"
                android:textColor="#333"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switch_allow_duplicates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>